--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,12 +1,8 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Teaching and mentoring"
 permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
-
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+Lorem ipsum dolor sit amed.
