--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,4 +5,24 @@ permalink: /teaching/
 author_profile: true
 ---
 
-Lorem ipsum dolor sit amed.
+At ITC, my responsibilities include giving lectures on various data science topics, writing coding exercises, and helping students through their studies.
+
+Topics that I have taught include:
+* Classical machine learning (classification and regression algorithms, unsupervised learning, ...)
+* Introduction to deep learning
+* Keras and TensorFlow
+* Natural language processing and computer vision
+
+I also serve as their advisor as they work on their final data science projects, including writing online articles describing their work. Projects that my students have produced include:
+
+* 2022
+  * [Automatic photo curation with computer vision](https://medium.com/@asisher/how-to-choose-your-good-photos-by-ai-4dfe0e8bbb10) – Asi Sheratzki, Ary Enrique, Eran Perelman
+  * [Moodika: Generating Spotify Playlists based on Free Text Input](https://medium.com/@doron.reiffman/moodika-generating-spotify-playlists-based-on-free-text-input-8f4eccc1254) – Noam Goldberg, Samuel Nataf, and Doron Reiffman
+  * [LawBerta: Legal clause extraction](https://medium.com/@ursullasmirnova/5cbad1d2e77b) – Alon Gabay, Ursulla Smirnova, Yam Eitan
+  * ["Can 3 students and an Android app beat Tesla?"](https://medium.com/@david.demby613/can-3-students-and-an-android-app-beat-tesla-287c7e5d022f) – Akiva Adler, David Demby, Samuel Abbetan
+* 2021
+  * ["Same-same but different: Detecting product similarities"](https://medium.com/geekculture/same-same-but-different-detecting-product-similarities-by-their-e-commerce-titles-and-images-5ea10021f522) – Haim Attias, Itamar Zaltzman, Karishma Shah, Roy Yanovski
+  * [Sentiment analysis for detection of "Anti-Vax" tweets](https://medium.com/swlh/global-covid-17-anti-vaxxers-detection-76a768342c28) – Noa Ehrenhalt, Neta Geva, Nofar Herman, Ron Levy, Yaniv Weiss
+  * [Classifying emotions using audio recordings and Python](https://towardsdatascience.com/classifying-emotions-using-audio-recordings-and-python-434e748a95eb) – Tal Baram, Asher Holder, Maria Startseva
+* 2020
+  * [Hateful meme detection](https://medium.com/@sdkleiner/how-to-end-up-in-the-top-5-of-a-u-s100-000-competition-2464b232fc06) – Sebastian Kleiner, Rozanna Royter, Ariela Strimling
