--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
                     applied to tasks involving vision and language.
                   </p>
                   <p>
-                    I received my MSc with honors from Tel Aviv University in Computer Science and my BSc from MIT with
-                    a dual major in mathematics and linguistics. My prior employment experience includes work as a data
-                    scientist in the industry as well as lecturing and designing learning materials on data science and
-                    deep learning
-                    at <a href="https://www.itc.tech/">Israel Tech Challenge (ITC)</a>.
+                    I began my PhD in March 2023; previously, I received my MSc with honors from Tel Aviv University in Computer Science and my BSc from MIT with
+                    a dual major in mathematics and linguistics. I also have experience working as a data scientist and teaching
+                    machine learning to industry professionals.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:morrisalper@mail.tau.ac.il">Email</a> &nbsp;/&nbsp;
@@ -49,6 +47,7 @@
                     <a href="https://scholar.google.com/citations?user=M2RsdCUAAAAJ">Scholar</a> &nbsp;/&nbsp;
                     <a href="https://twitter.com/MorrisAlper">Twitter</a> &nbsp;/&nbsp;
                     <a href="https://github.com/morrisalp/">GitHub</a> &nbsp;/&nbsp;
+                    <a href="https://www.linkedin.com/in/morris-alper/">LinkedIn</a> &nbsp;/&nbsp;
                     <a href="https://orcid.org/0000-0002-3533-7602">ORCID</a>
                   </p>
                 </td>
