--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:morrisalper@mail.tau.ac.il">Email</a> &nbsp;/&nbsp;
-                    <a href="#">CV</a> &nbsp;/&nbsp;
+                    <a href="files/CV.pdf">CV</a> &nbsp;/&nbsp;
                     <a href="https://scholar.google.com/citations?user=M2RsdCUAAAAJ">Scholar</a> &nbsp;/&nbsp;
                     <a href="https://twitter.com/MorrisAlper">Twitter</a> &nbsp;/&nbsp;
                     <a href="https://github.com/morrisalp/">GitHub</a> &nbsp;/&nbsp;
