--- a/index.html
+++ b/index.html
@@ -77,6 +77,37 @@
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
+                    <img src='images/halo.png' width="160">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://tau-vailab.github.io/HaLo-NeRF/">
+                    <span class="papertitle">
+                      HaLo-NeRF:
+Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
+                    </span>
+                  </a>
+                  <br>
+                  Chen Dudai<sup>*</sup>,
+                  <strong>Morris Alper</strong><sup>*</sup>,
+                  Hana Bezalel,
+                  <a href="https://people.cs.uchicago.edu/~ranahanocka/">Rana Hanocka</a>,
+                  <a href="https://itailang.github.io/">Itai Lang</a>,
+                  <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>
+                  &nbsp;&nbsp;<small><sup>*</sup>Equal contribution</small>
+                  <br>
+                  <em>Eurographics</em>, 2024
+                  <br>
+                  <p></p>
+                  <p>
+                    We learn a semantic localization field for textual descriptions over collections of in-the-wild images depicting a large-scale scene.
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
                     <img src='images/kiki.webp' width="160">
                   </div>
                 </td>
@@ -170,6 +201,18 @@
               <tr>
                 <td class="section">
                   <h2>Miscellanea</h2>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <b>Featured in the News:</b>
+                  <ul>
+                    <li>Our work on the Kiki-Bouba effect and sound symbolism in AI models was featured
+                      <a href="https://www.haaretz.co.il/science/2024-01-25/ty-article-magazine/.premium/0000018d-3b2d-d32b-adcf-ff6f828f0000">
+                        in the Haaretz newspaper</a> (Hebrew language). I was also interviewed about this work on the Kan Tarbut morning radio program
+                        (<a href="https://www.kan.org.il/content/kan/podcasts/p-8270/699060/">recording link</a>, 46:30-60:00, Hebrew language).
+                      </li>
+                  </ul>
                 </td>
               </tr>
               <tr>
