--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -122,6 +122,11 @@ Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                   <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>
                   <br>
                   <em>NeurIPS (spotlight)</em>, 2023
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <a href="https://www.youtube.com/watch?v=miNsjJy7sHw">
+                    <i class="fa fa-youtube-play"></i>
+                    Presentation from IMVC 2024
+                  </a>
                   <br>
                   <p></p>
                   <p>
