--- a/index.html
+++ b/index.html
@@ -77,6 +77,33 @@
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
+                    <img src='images/ICC.png' width="160">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://moranyanuka.github.io/icc/">
+                    <span class="papertitle">
+                      ICC : Quantifying Image Caption Concreteness for Multimodal Dataset Curation
+                    </span>
+                  </a>
+                  <br>
+                  <a href="https://www.linkedin.com/in/moran-yanuka-a5452a1b7/">Moran Yanuka</a>,
+                  <strong>Morris Alper</strong>,
+                  <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>,
+                  <a href="https://www.giryes.sites.tau.ac.il/">Raja Giryes</a>
+                  <br>
+                  <em>ACL (Findings)</em>, 2024
+                  <br>
+                  <p></p>
+                  <!-- <p>
+                    We learn a semantic localization field for textual descriptions over collections of in-the-wild images depicting a large-scale scene.
+                  </p> -->
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
                     <img src='images/halo.png' width="160">
                   </div>
                 </td>
@@ -88,9 +115,9 @@ Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                     </span>
                   </a>
                   <br>
-                  Chen Dudai<sup>*</sup>,
+                  <a href="https://www.linkedin.com/in/chen-dudai-108a72136/">Chen Dudai</a><sup>*</sup>,
                   <strong>Morris Alper</strong><sup>*</sup>,
-                  Hana Bezalel,
+                  <a href="https://www.linkedin.com/in/hanabezalel/">Hana Bezalel</a>,
                   <a href="https://people.cs.uchicago.edu/~ranahanocka/">Rana Hanocka</a>,
                   <a href="https://itailang.github.io/">Itai Lang</a>,
                   <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>
@@ -180,7 +207,7 @@ Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                   </a>
                   <br>
                   <strong>Morris Alper</strong><sup>*</sup>,
-                  Michael Fiman<sup>*</sup>,
+                  <a href="https://www.linkedin.com/in/michael-fiman/">Michael Fiman</a><sup>*</sup>,
                   <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>
                   &nbsp;&nbsp;<small><sup>*</sup>Equal contribution</small>
                   <br>
