--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                     applied to tasks involving vision and language.
                   </p>
                   <p>
-                    I began my PhD in March 2023; previously, I received my MSc with honors from Tel Aviv University in Computer Science and my BSc from MIT with
-                    a dual major in mathematics and linguistics. I also have experience working as a data scientist and teaching
+                    I began my PhD in March 2023; previously, I received my MSc with honors from Tel Aviv University in
+                    Computer Science and my BSc from MIT with
+                    a dual major in mathematics and linguistics. I also have experience working as a data scientist and
+                    teaching
                     machine learning to industry professionals.
                   </p>
                   <p style="text-align:center">
@@ -77,6 +79,30 @@
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
+                    <img src='images/hc.png' width="180">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://tau-vailab.github.io/hierarcaps/">
+                    <span class="papertitle">
+                      Emergent Visual-Semantic Hierarchies in Image-Text Representations
+                    </span>
+                  </a>
+                  <br>
+                  <strong>Morris Alper</strong>,
+                  <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>
+                  <br>
+                  <em>ECCV</em>, 2024
+                  <br>
+                  <p>
+                    We show that foundation VLMs like CLIP model visual-semantic hierarchies, proposing the Radial Embedding framework for probing and optimizing this knowledge and the HierarCaps dataset of ground-truth image caption hierarchies.
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
                     <img src='images/ICC.png' width="160">
                   </div>
                 </td>
@@ -94,10 +120,10 @@
                   <br>
                   <em>ACL (Findings)</em>, 2024
                   <br>
-                  <p></p>
-                  <!-- <p>
-                    We learn a semantic localization field for textual descriptions over collections of in-the-wild images depicting a large-scale scene.
-                  </p> -->
+                  <p>
+                    We quantify image caption concreteness using information loss in foundation vision-language models,
+                    and use this score to filter web-scale multimodal datasets.
+                  </p>
                 </td>
               </tr>
 
@@ -111,7 +137,7 @@
                   <a href="https://tau-vailab.github.io/HaLo-NeRF/">
                     <span class="papertitle">
                       HaLo-NeRF:
-Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
+                      Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                     </span>
                   </a>
                   <br>
@@ -127,7 +153,8 @@ Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                   <br>
                   <p></p>
                   <p>
-                    We learn a semantic localization field for textual descriptions over collections of in-the-wild images depicting a large-scale scene.
+                    We learn a semantic localization field for textual descriptions over collections of in-the-wild
+                    images depicting a large-scale scene.
                   </p>
                 </td>
               </tr>
@@ -185,9 +212,9 @@ Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                   <br>
                   <p></p>
                   <p>
-                    We propose to model human-human interaction understanding in images as free text
-                    generation, providing a new benchmark and showing how to use Internet image captions
-                    as weak supervision for this task.
+                    We model human-human interaction understanding in images as free text
+                    generation, provide a new benchmark and show how to learn this with weak supervision from Internet
+                    image captions.
                   </p>
                 </td>
               </tr>
@@ -215,9 +242,8 @@ Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                   <br>
                   <p></p>
                   <p>
-                    We investigate the effect of vision-and-language pretraining on visual reasoning in text, finding
-                    that multimodally trained text encoders outperform unimodally
-                    trained encoders such as BERT on such tasks.
+                    We find that multimodally trained text encoders outperform unimodally
+                    trained text encoders on visual reasoning in text.
                   </p>
                 </td>
               </tr>
@@ -240,10 +266,13 @@ Learning Geometry-Guided Semantics for Exploring Unconstrained Photo Collections
                   <b>Featured in the News:</b>
                   <ul>
                     <li>Our work on the Kiki-Bouba effect and sound symbolism in AI models was featured
-                      <a href="https://www.haaretz.co.il/science/2024-01-25/ty-article-magazine/.premium/0000018d-3b2d-d32b-adcf-ff6f828f0000">
-                        in the Haaretz newspaper</a> (Hebrew language). I was also interviewed about this work on the Kan Tarbut morning radio program
-                        (<a href="https://www.kan.org.il/content/kan/podcasts/p-8270/699060/">recording link</a>, 46:30-60:00, Hebrew language).
-                      </li>
+                      <a
+                        href="https://www.haaretz.co.il/science/2024-01-25/ty-article-magazine/.premium/0000018d-3b2d-d32b-adcf-ff6f828f0000">
+                        in the Haaretz newspaper</a> (Hebrew language). I was also interviewed about this work on the
+                      Kan Tarbut morning radio program
+                      (<a href="https://www.kan.org.il/content/kan/podcasts/p-8270/699060/">recording link</a>,
+                      46:30-60:00, Hebrew language).
+                    </li>
                   </ul>
                 </td>
               </tr>
