--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <strong>Morris Alper</strong>,
                   <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>
                   <br>
-                  <em>ECCV</em>, 2024
+                  <em>ECCV (Oral)</em>, 2024
                   <br>
                   <p>
                     We show that foundation VLMs like CLIP model visual-semantic hierarchies, proposing the Radial Embedding framework for probing and optimizing this knowledge and the HierarCaps dataset of ground-truth image caption hierarchies.
@@ -175,7 +175,7 @@
                   <strong>Morris Alper</strong>,
                   <a href="https://www.elor.sites.tau.ac.il/">Hadar Averbuch-Elor</a>
                   <br>
-                  <em>NeurIPS (spotlight)</em>, 2023
+                  <em>NeurIPS (Spotlight)</em>, 2023
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <a href="https://www.youtube.com/watch?v=miNsjJy7sHw">
                     <i class="fa fa-youtube-play"></i>
