--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
                   <p>
                     I am a PhD student at the
                     <a href="https://en-engineering.tau.ac.il/School-of-Electrical-Engineering/main">School of
-                      Electrical Engineering, Tel Aviv University (TAU)</a>.
-                    Under the
-                    mentorship of <a href="https://www.hadarelor.com/">Dr. Hadar Averbuch-Elor</a>, I am
-                    researching multimodal learning – machine learning
-                    applied to tasks involving vision and language.
+                      Electrical Engineering, Tel Aviv University (TAU)</a>, supervised by
+                      <a href="https://www.hadarelor.com/">Dr. Hadar Averbuch-Elor</a>.
+                    My research interests lie on the intersection of vision, language, and three-dimensional data, informed by how humans
+                    perceive the world.
                   </p>
                   <p>
                     I began my PhD in March 2023; previously, I received my MSc with honors from Tel Aviv University in
@@ -98,7 +97,8 @@
                   <em>EMNLP</em>, 2024
                   <br>
                   <p>
-                    
+                    We propose a framework for addressing open-vocabulary hallucinations in image captioning models, including a new benchmark
+                    and a reinforcement learning-based method to reduce such hallucinations.
                   </p>
                 </td>
               </tr>
