--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <a href="files/CV.pdf">CV</a> &nbsp;/&nbsp;
                     <a href="https://scholar.google.com/citations?user=M2RsdCUAAAAJ">Scholar</a> &nbsp;/&nbsp;
                     <a href="https://twitter.com/MorrisAlper">Twitter</a> &nbsp;/&nbsp;
+		    <a href="https://bsky.app/profile/malper.bsky.social">Bluesky</a> &nbsp;/&nbsp;
                     <a href="https://github.com/morrisalp/">GitHub</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/morris-alper/">LinkedIn</a> &nbsp;/&nbsp;
                     <a href="https://orcid.org/0000-0002-3533-7602">ORCID</a>
