--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                     Morris Alper
                   </p>
                   <p>
-                    I am a PhD student at the
-                    <a href="https://en-engineering.tau.ac.il/School-of-Electrical-Engineering/main">School of
-                      Electrical Engineering, Tel Aviv University (TAU)</a>, supervised by
+                    I am a PhD student supervised by
                       <a href="https://www.hadarelor.com/">Dr. Hadar Averbuch-Elor</a>.
                     My research interests lie on the intersection of vision, language, and three-dimensional data, informed by how humans
                     perceive the world.
