--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
                     Morris Alper
                   </p>
                   <p>
-                    I am a PhD student supervised by
+                    I am a PhD student in the Department of Computer Science at Cornell University (Cornell Tech campus), supervised by
                       <a href="https://www.hadarelor.com/">Dr. Hadar Averbuch-Elor</a>.
-                    My research interests lie on the intersection of vision, language, and three-dimensional data, informed by how humans
-                    perceive the world.
+                      I research multimodal learning, combining vision with modalities such as language and three-dimensional data for complex tasks requiring high-level semantic understanding.
                   </p>
                   <p>
                     I began my PhD in March 2023; previously, I received my MSc with honors from Tel Aviv University in
@@ -74,7 +73,33 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
-              <tr></tr>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <img src='images/waffle.png' width="180">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://tau-vailab.github.io/WAFFLE/">
+                    <span class="papertitle">
+                      WAFFLE: Multimodal Floorplan Understanding in the Wild
+                    </span>
+                  </a>
+                  <br>
+                  <a href="https://www.linkedin.com/in/keren-ganon/">Keren Ganon</a>,
+                  <strong>Morris Alper</strong>,
+                  <a href="https://www.linkedin.com/in/rachel-mikulinsky-3a099411b/">Rachel Mikulinsky</a>,
+                  <a href="https://www.hadarelor.com/">Hadar Averbuch-Elor</a>
+                  <br>
+                  <em>WACV</em>, 2025
+                  <br>
+                  <p>
+                    We introduce WAFFLE, a novel multimodal floorplan understanding dataset of nearly 20K diverse floorplan images and metadata, and we show that this data enables progress on new building understanding tasks.
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <img src='images/mocha.png' width="180">
