--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
                       I research multimodal learning, combining vision with modalities such as language and three-dimensional data for complex tasks requiring high-level semantic understanding.
                   </p>
                   <p>
-                    I began my PhD in March 2023; previously, I received my MSc with honors from Tel Aviv University in
-                    Computer Science and my BSc from MIT with
-                    a dual major in mathematics and linguistics. I also have experience working as a data scientist and
-                    teaching
-                    machine learning to industry professionals.
+                    I received my MSc with honors from Tel Aviv University in Computer Science and my BSc from MIT with a dual major in mathematics and linguistics. I was a research scientist intern at Meta in 2024, and have industry experience working as a data scientist and teaching machine learning to industry professionals.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:morrisalper@mail.tau.ac.il">Email</a> &nbsp;/&nbsp;
