--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
                     </span>
                   </a>
                   <br>
-                  <a href="https://www.linkedin.com/in/keren-ganon/">Keren Ganon</a>,
-                  <strong>Morris Alper</strong>,
+                  <a href="https://www.linkedin.com/in/keren-ganon/">Keren Ganon</a><sup>*</sup>,
+                  <strong>Morris Alper</strong><sup>*</sup>,
                   <a href="https://www.linkedin.com/in/rachel-mikulinsky-3a099411b/">Rachel Mikulinsky</a>,
                   <a href="https://www.hadarelor.com/">Hadar Averbuch-Elor</a>
+                  &nbsp;&nbsp;<small><sup>*</sup>Equal contribution</small>
                   <br>
                   <em>WACV</em>, 2025
                   <br>
