--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Morris Alper
                   </p>
                   <p>
-                    I am a PhD student in the Department of Computer Science at Cornell University (Cornell Tech campus), supervised by
+                    I am a PhD student in machine learning, supervised by
                       <a href="https://www.hadarelor.com/">Dr. Hadar Averbuch-Elor</a>.
                       I research multimodal learning, combining vision with modalities such as language and three-dimensional data for complex tasks requiring high-level semantic understanding.
                   </p>
@@ -36,7 +36,7 @@
                     I received my MSc with honors from Tel Aviv University in Computer Science and my BSc from MIT with a dual major in mathematics and linguistics. I was a research scientist intern at Meta in 2024, and have industry experience working as a data scientist and teaching machine learning to industry professionals.
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:maa428@cornell.edu">Email</a> &nbsp;/&nbsp;
+                    <a href="mailto:morrisalp@gmail.com">Email</a> &nbsp;/&nbsp;
                     <a href="files/CV.pdf">CV</a> &nbsp;/&nbsp;
                     <a href="https://scholar.google.com/citations?user=M2RsdCUAAAAJ">Scholar</a> &nbsp;/&nbsp;
                     <a href="https://twitter.com/MorrisAlper">Twitter</a> &nbsp;/&nbsp;
