--- a/index.html
+++ b/index.html
@@ -72,6 +72,35 @@
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
+                    <img src='images/protosnap.png' width="150">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://tau-vailab.github.io/ProtoSnap/">
+                    <span class="papertitle">
+                      ProtoSnap: Prototype Alignment for Cuneiform Signs
+                    </span>
+                  </a>
+                  <br>
+                  <a href="https://www.linkedin.com/in/rachel-mikulinsky-3a099411b/">Rachel Mikulinsky</a><sup>*</sup>,
+                  <strong>Morris Alper</strong><sup>*</sup>,
+                  <a href="https://cris.ariel.ac.il/en/persons/shai-gordin-2">Shai Gordin</a>,
+                  <a href="https://lmu-munich.academia.edu/EnriqueJiménez">Enrique Jimenez</a>,
+                  <a href="https://english.tau.ac.il/profile/ycohen1">Yoram Cohen</a>,
+                  <a href="https://www.hadarelor.com/">Hadar Averbuch-Elor</a>
+                  &nbsp;&nbsp;<small><sup>*</sup>Equal contribution</small>
+                  <br>
+                  <em>ICLR</em>, 2025
+                  <br>
+                  <p>
+                    We propose ProtoSnap, a method for aligning prototype-based skeletons to cuneiform sign scans, and show it has applications for downstream cuneiform OCR.
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
                     <img src='images/waffle.png' width="180">
                   </div>
                 </td>
