--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
                     Morris Alper
                   </p>
                   <p>
-                    I am a PhD student in machine learning, supervised by
-                      <a href="https://www.hadarelor.com/">Dr. Hadar Averbuch-Elor</a>.
-                      I research multimodal learning, combining vision with modalities such as language and three-dimensional data for complex tasks requiring high-level semantic understanding.
+                    I am a machine learning researcher and computational linguist.
+                    I research how machine learning models understand language, how they can be leveraged for challenging linguistic tasks, and how they integrate language with modalities such as vision for high-level semantic understanding.
                   </p>
                   <p>
                     I received my MSc with honors from Tel Aviv University in Computer Science and my BSc from MIT with a dual major in mathematics and linguistics. I was a research scientist intern at Meta in 2024, and have industry experience working as a data scientist and teaching machine learning to industry professionals.
