--- a/index.html
+++ b/index.html
@@ -71,6 +71,33 @@
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
+                    <img src='images/wildcat3d.png' width="160">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://wildcat3d.github.io/">
+                    <span class="papertitle">
+                      WildCAT3D: Appearance-Aware Multi-View Diffusion in the Wild
+                    </span>
+                  </a>
+                  <br>
+                  <strong>Morris Alper</strong>,
+                  <a href="https://d-novotny.github.io/">David Novotny</a>,
+                  <a href="https://www.fkokkinos.com">Filippos Kokkinos</a>,
+                  <a href="https://www.hadarelor.com/">Hadar Averbuch-Elor</a>,
+                  <a href="https://tmonnier.com">Tom Monnier</a>
+                  <br>
+                  <em>NeurIPS</em>, 2025
+                  <br>
+                  <p>
+                    We present a framework for generating novel views of scenes learned from diverse 2D scene image data captured in the wild, enabling appearance-controlled novel view synthesis from a single image.
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
                     <img src='images/protosnap.png' width="150">
                   </div>
                 </td>
