--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     I research how machine learning models understand language, how they can be leveraged for challenging linguistic tasks, and how they integrate language with modalities such as vision for high-level semantic understanding.
                   </p>
                   <p>
-                    I received my MSc with honors from Tel Aviv University in Computer Science and my BSc from MIT with a dual major in mathematics and linguistics. I was a research scientist intern at Meta in 2024, and have industry experience working as a data scientist and teaching machine learning to industry professionals.
+                    I am a PhD graduand in multimodal machine learning from Tel Aviv University, where I also received my MSc with honors. My BSc was from MIT, with a dual major in mathematics and linguistics. I was a research scientist intern at Meta in 2024, and have industry experience working as a data scientist and teaching machine learning to industry professionals.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:morrisalp@gmail.com">Email</a> &nbsp;/&nbsp;
