--- a/index.html
+++ b/index.html
@@ -71,6 +71,59 @@
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
+                    <img src='images/conlangcrafter.png' width="160">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://conlangcrafter.github.io">
+                    <span class="papertitle">
+                      ConlangCrafter: Constructing Languages with a Multi-Hop LLM Pipeline
+                    </span>
+                  </a>
+                  <br>
+                  <strong>Morris Alper<sup>*</sup></strong>,
+                  <a href="https://www.linkedin.com/in/moran-yanuka-a5452a1b7/">Moran Yanuka<sup>*</sup></a>,
+                  <a href="https://www.giryes.sites.tau.ac.il/">Raja Giryes</a>,
+                  <a href="https://www.gasperbegus.com/">Gašper Beguš</a>
+                  &nbsp;&nbsp;<small><sup>*</sup>Equal contribution</small>
+                  <br>
+                  <em>arXiv</em>, 2025
+                  <br>
+                  <p>
+                    ConlangCrafter leverages LLMs to generate constructed languages through a multi-hop pipeline that decomposes language design into modular stages, with components encouraging consistency and typological diversity.
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <img src='images/phonikud.png' width="180">
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://thewh1teagle.github.io/phonikud-paper/">
+                    <span class="papertitle">
+                      Phonikud: Hebrew Grapheme-to-Phoneme Conversion for Real-Time Text-to-Speech
+                    </span>
+                  </a>
+                  <br>
+                  <a href="https://www.linkedin.com/in/yakov-kolani/">Yakov Kolani</a>,
+                  <a href="https://www.linkedin.com/in/max-melichov/">Maxim Melichov</a>,
+                  <a href="https://www.linkedin.com/in/kcalev/">Cobi Calev</a>,
+                  <strong>Morris Alper</strong>
+                  <br>
+                  <em>arXiv</em>, 2025
+                  <br>
+                  <p>
+                    We introduce Phonikud, an open-source grapheme-to-phoneme (G2P) system for Modern Hebrew, and the new ILSpeech dataset and benchmark for Hebrew TTS and G2P. These enable training real-time Hebrew TTS with better phonetic accuracy.
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
                     <img src='images/wildcat3d.png' width="160">
                   </div>
                 </td>
@@ -90,7 +143,7 @@
                   <em>NeurIPS</em>, 2025
                   <br>
                   <p>
-                    We present a framework for generating novel views of scenes learned from diverse 2D scene image data captured in the wild, enabling appearance-controlled novel view synthesis from a single image.
+                    WildCAT3D generates novel views of scenes learned from diverse 2D scene image data captured in the wild, enabling appearance-controlled novel view synthesis from a single image.
                   </p>
                 </td>
               </tr>
@@ -119,7 +172,7 @@
                   <em>ICLR</em>, 2025
                   <br>
                   <p>
-                    We propose ProtoSnap, a method for aligning prototype-based skeletons to cuneiform sign scans, and show it has applications for downstream cuneiform OCR.
+                    We present ProtoSnap, a method for aligning prototype-based skeletons to cuneiform sign scans, and show it has applications for downstream cuneiform OCR.
                   </p>
                 </td>
               </tr>
