--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   <a href="https://www.hadarelor.com/">Hadar Averbuch-Elor</a>
                   &nbsp;&nbsp;<small><sup>*</sup>Equal contribution</small>
                   <br>
-                  <em>WACV</em>, 2025
+                  <em>WACV (Oral)</em>, 2025
                   <br>
                   <p>
                     We introduce WAFFLE, a novel multimodal floorplan understanding dataset of nearly 20K diverse floorplan images and metadata, and we show that this data enables progress on new building understanding tasks.
